--- a/helm-chart/templates/deployment.yaml
+++ b/helm-chart/templates/deployment.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ .Chart.Name }}
-  namespace: wenyuan-test
+  namespace: {{ .Values.service.namespace }}
 spec:
   replicas: 1
   selector:
