增加了http探针，对system_health添加标签

--- a/helm-chart/templates/deployment.yaml
+++ b/helm-chart/templates/deployment.yaml
@@ -23,3 +23,5 @@ spec:
               containerPort: {{ .Values.service.ports.port }}
           args:
             - "--health-urls={{ .Values.healthUrls | join "," }}"
+            - "--timeout-seconds={{ .Values.timeoutSeconds}}"
+            - "--labels={{ .Values.labels}}"
